syntax = "proto3";
package goinsane.pbutil;
option go_package = "github.com/goinsane/pbutil";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message ExampleData {
    bool bool_value = 1;
    int64 int64_value = 2;
    double double_value = 3;
    string string_value = 4;
    google.protobuf.Timestamp timestamp_value = 5;
    google.protobuf.BoolValue bool_wrapped_Value = 6;
    google.protobuf.Int64Value wrapped_int64_value = 7;
    google.protobuf.DoubleValue wrapped_double_value = 8;
    google.protobuf.StringValue wrapped_string_value = 9;
}
