syntax = "proto3";
package goinsane.pbutil;
option go_package = "github.com/goinsane/pbutil/mongopb";

message ObjectID {
  string value = 1;
}
